[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiobookoo-ultra"
version = '0.1.3'
license = { text = "MIT" }
description = "Async BLE client for the Bookoo Themis Ultra scale"
readme = "README.md"
authors = [
    { name = "Makerwolf", email = "160181889+makerwolf@users.noreply.github.com" },
]
maintainers = [
    { name = "Makerwolf", email = "160181889+makerwolf@users.noreply.github.com" },
]
keywords = ["Bookoo", "Bluetooth", "api", "async", "client", "themis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["bleak >= 0.20.2"]
requires-python = ">= 3.12"

[project.urls]
Homepage = "https://github.com/Esojma-Silverbullet/aiobookoo-Ultra"
Repository = "https://github.com/Esojma-Silverbullet/aiobookoo-Ultra"
Documentation = "https://github.com/Esojma-Silverbullet/aiobookoo-Ultra"

[tool.setuptools.packages.find]
include = ["aiobookoo", "aiobookoo.*", "aiobookoo_ultra", "aiobookoo_ultra.*"]

[project.optional-dependencies]
dev = [
    "covdefaults == 2.3.0",
    "coverage == 7.6.7",
    "syrupy == 4.7.2",
    "pytest == 8.3.3",
    "pytest-asyncio == 0.24.0",
    "pytest-cov == 6.0.0",
]
